# SGDB

./: CMakeLists.txt  Makefile  README.md  Structure.txt  launch.json  tasks.json
include/: database.h  index.h  table.h
src/: database.cpp  index.cpp  main.cpp  table.cpp
testing/: tests.cpp
tests/: test_database.cpp  test_index.cpp  test_table.cpp
